# cerebrum

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.debug.yaml  compose.yaml  dev-dependencies.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  docker-ci.yml  test.yml
app/: database.py  main.py  models.py  schemas.py  security.py  utils.py
app/routers/: __init__.py  clients.py  cogspeed.py
assets/: config.yaml
tests/: conftest.py  test_create_account.py  test_login.py  test_model_schema_sync.py  test_post_test_result.py
tests/clients/: test_create_account.py  test_fetch_client.py  test_login.py
tests/cogspeed/: test_post_test_result.py
tests/security/: test_client_security.py
visualisation/: Dockerfile
visualisation/scripts/: create_test_data.py
visualisation/src/: main.py  utils.py
